--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.1.1",
     "prettier-eslint": "^16.2.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "webpack-cli": "^5.1.4"
   }
 }
